--- a/public/Style.css
+++ b/public/Style.css
@@ -50,7 +50,7 @@ width: 99%;
    font-family: "Open Sans", sans-serif;
    font-size: 15px;
    position: relative;
-   left: 4000%;
+   left: 1500px;
    top: 6px;
    
 }
