--- a/public/Browse.css
+++ b/public/Browse.css
@@ -192,7 +192,7 @@ width: 99%;
     border-radius: 5px;
     cursor: pointer;
     transition: 0.3s ease;
-    ;
+    text-decoration: none;
    
   
    }
