--- a/public/login.css
+++ b/public/login.css
@@ -86,8 +86,8 @@ background-image: url(/public/materials/fan2.jpg);
  }
  
  .form form {
-   width: 300px; 
-   height: 200px;
+   width: 400px; 
+   height: 300px;
    padding: 100px;
    border: 1px solid #150e0e;
    border-radius: 10px;
@@ -97,6 +97,7 @@ background-image: url(/public/materials/fan2.jpg);
  }
 
  .form h1 {
+   font-size: 360%;
    color: #EC4899;
    margin-bottom: 90px;
    margin-top: -80px; 
@@ -111,19 +112,49 @@ background-image: url(/public/materials/fan2.jpg);
    width: 100%;
    padding: 20px;
    border: 1px solid #000000;
-   border-radius: 5px;
+   border-radius: 12px;
    box-sizing: border-box;
    background-color: #000000;
    color: #fff;
-   font-size: 15px;
+   font-size: 140%;
+   letter-spacing: 0.1ch;
  }
  
  .form input[type="submit"] {
+   font-size: 140%;
    background-color:#EC4899 ;
    color: #fff;
    border: none;
-   border-radius: 5px;
+   border-radius: 7px;
    cursor: pointer;
+   margin-top: 17px;
  }
+ .inputs{
+   width: 510px;
+   margin-left: -60px;
+   margin-top: 10px;
+ }
+ .password{
+   margin-top: 40px;  
+ }
+
+ .password-toggle-icon {
+   margin-top: -25px;
+   margin-left: 455px;
+   display: flex;
+   position: absolute;
+   transform: translateY(-50%);
+   cursor: pointer;
+   align-items: center;
+ }
+ 
+ .password-toggle-icon i {
+   font-size: 25px;
+   line-height: 1;
+   color: #EC4899;
+   transition: color 0.3s ease-in-out;
+   margin-bottom: 20px;
+ }
+ 
 
 
