--- a/public/Style.css
+++ b/public/Style.css
@@ -256,11 +256,12 @@ display: flex;
 
 
 
-
+      .Main_holder{
+         
+         display: grid;
+         grid-template-columns: auto auto ;
+      }
       
-
-
-
 
 
       .holder{
@@ -268,6 +269,27 @@ display: flex;
          padding: 2%;
          justify-content: center;
       }
+      .holder_words {
+         padding: 3%;
+         display: grid;
+         justify-content: center;
+         color: white;
+       }
+       
+       .holder_words h3 {
+         margin: 0;
+       }
+
+      select{
+         border:none;
+         border-radius: 7px;
+         height: 50px;
+         padding: 6px;
+         margin-left: 15px;
+         margin-right: 10px;
+      }
+         
+        
 
       .creat-acc h1{
          padding-left: 36%;
