--- a/public/Admin.css
+++ b/public/Admin.css
@@ -8,22 +8,23 @@ background-color: #3A3838 ;
  
  .card {
     background-color: white;
-    width: 800px;
-     height: 250px;
+    
+    width: 1000px;
+     height: 300px;
     border-radius: 10px;
-    padding: 0px/*top*/ 50px/*right*/ 90px/*bottom*/ 500px/*left*/;
+    padding: 0px/*top*/ 50px/*right*/ 90px/*bottom*/ 0px/*left*/;
     transition: 0.7s ease;
-   margin-top: 100px;
+    margin-left: 500px;
+    margin-top: 100px;
    display: grid;
    grid-template-columns: auto auto;
 
-margin-left: 300px;
-margin-bottom: -800px;
 
  }
 
  .side_info{
     margin-top: 50px;
+    margin-left: 50px;
   }
  
   .icon{
@@ -32,22 +33,19 @@ margin-bottom: -800px;
   .side_img img {
  
      border-radius: 3%;
-     width: 100px; 
-     height: 50%; 
+     width: 430px; 
+     height: 116%; 
      
    
  }
  
- #pic{
-    position: relative;
-    right: 499px;
- }
+ 
    
   .info{
      
     font-size: 20px;
     position: relative;
-    right: 410px;
+    
   }
   .info i {
      margin-right: 0px;
@@ -62,25 +60,43 @@ margin-bottom: -800px;
   }
  
   .button_dist{
-    padding-left: 5px;
+    
     position: relative;
-     left: 10px;
-     top:px;
+     left: 160px;
+     
      padding-bottom: px;
   }
  
   .button_dist h4{
     position: relative;
     top: 0px;
-    right: 600px;
+   
  
  
   }
  
-  .booking-btn {
+  .button130{
+   
+   padding: 30px 80px;
+   background-color: black;
+   color: #fff;
+   border: none;
+   border-radius: 5px;
+   cursor: pointer;
+   transition: 0.3s ease;
+   text-decoration: none;
+   position: relative;
+   right: 200px;
+   top: 20px;
  
-     display: inline-block;
-     padding: 30px 100px;    
+  
+}
+
+  .booking-btn {
+   position: relative;
+   left: 100px;
+     
+     padding: 30px 90px;    
      background-color: #EC4899;
      color: white;
      border: none;
@@ -88,52 +104,12 @@ margin-bottom: -800px;
      cursor: pointer;
      transition: 0.3s ease;
      text-decoration: none;
-    left: 0 px;
-    right: 5px ;
+   
    
     }
    
-   .booking-btn:hover {
-     background-color: white;
-     color: black;
-   }
- 
- 
-   .booking-btn2 {
- 
-    display: inline-block;
-    padding: 0px 9px;    
-    border: none;
-    border-radius: 5px;
-    transition: 0.3s ease;
-    cursor:no-drop;
-   
-  
-   }
-  
-   #finishbtn{
-    background-color: black;
-    color: white;
-    
-    
-    
-   }
-  
- 
- .secndcard{
-    padding-bottom: 99px;
- 
- }
 
 
-.left-side{
-left : 15px ;
-display:flex;
-text-align: center ;
-
-
-
-}
 
 
 
@@ -167,8 +143,6 @@ padding: 20px;
 box-sizing: border-box;
 margin-top: 0;
 position: fixed;
-top: 0;
-left: 0;
 height: 100%;
 overflow-y: auto;
 flex-direction: column;
@@ -474,30 +448,13 @@ background-color: #f2f2f2;
 
 background: black;
 }
-.button130{
-
-   display: inline-block;
-   padding: 40px 100px;
-   background-color: black;
-   color: #fff;
-   border: none;
-   border-radius: 5px;
-   cursor: pointer;
-   transition: 0.3s ease;
-   text-decoration: none;
-   position: absolute;
-   left: 600px;
-   top: 325px;
-}
-.cancel-event{
-right:100;
-object-position: float;
-color: white;
 
 
-}
 .header {
    position: absolute;
+   font-size: 30px;
+   font-weight: bold;
+   color: white; 
    top: 10px;
    right: 650px;
 }
