--- a/public/Style.css
+++ b/public/Style.css
@@ -291,6 +291,15 @@ display: flex;
          
         
 
+
+
+
+
+      .creat-acc{
+         padding-top: 99px;
+      }
+
+      
       .creat-acc h1{
          padding-left: 36%;
          color: white;
