--- a/public/potm.css
+++ b/public/potm.css
@@ -134,7 +134,7 @@ width: 99%;
  background-color: white;
  height: 700px;
  border-radius: 9px;
- width: 1850px;
+ width: 98%;
  margin-left: 25px;
  
  
