--- a/public/Master.css
+++ b/public/Master.css
@@ -56,7 +56,7 @@
 .sidebar.open .logo-details #btn{
   text-align: right;
 }
-.sidebar i{
+.sidebar  i{
   color: #fff;
   height: 60px;
   min-width: 50px;
@@ -164,7 +164,7 @@
   transition: all 0.5s ease;
   color: #11101D;
 }
-.sidebar li i{
+.sidebar li  i{
   height: 50px;
   line-height: 50px;
   font-size: 18px;
@@ -285,3 +285,106 @@
     display: none;
   }
 }
+
+body{
+background-color: #E4E9F7;
+
+
+}
+#container1 {
+  display: none;
+  background-color:white;
+  right : 500px ;
+width: 360px;
+height:400px ;
+margin-left: 300px;
+margin-top: 150px;
+position:absolute; 
+border-radius: 8px;
+}
+#container2 {
+  display: none;
+  background-color:red;
+  
+left: 100px;
+
+
+}
+#container3 {
+  display: none;
+  background-color:red;
+  left:200px ;
+ 
+}
+
+h3{
+text-align: center;
+margin-top: 40px;
+margin-bottom: 40px ;
+color: black ;
+
+  
+
+
+}
+
+.contaniner1 from {
+width: 180px;
+
+top: 300px;
+left: 40px;
+
+}
+form input{
+width: 95%;
+padding: 10px 5px ;
+margin: 5px 0px;
+border: 0;
+border-bottom: 1px solid #999;
+background:  transparent;
+outline:black ;
+
+
+}
+::placeholder{
+
+color: black;
+
+}
+.button22{
+
+  width: 120px;
+margin:30px auto ;
+text-align: center;
+
+}
+form button{
+width: 110px;
+height: 35px;
+margin: 0 10px ;
+background: linear-gradient(to right,#ff10ff,#0634ff);
+border: 0;
+outline: none;
+cursor: pointer;
+margin-bottom: 10px;
+ margin-left:130px ;
+
+
+}
+.Admin-container2{
+  display: none;
+}
+/* #form2{
+
+left: 450px;
+
+} */
+
+
+/* .Large-Container{
+
+background-color: blueviolet;
+width :500px;
+right: 300px ;
+
+} */
