--- a/public/BookNow.css
+++ b/public/BookNow.css
@@ -88,9 +88,7 @@ width: 99%;
     top: 80px;
     margin-left:99px ;
     margin-right: 99px;
-    
-
-  
+    max-height:760px ;
  }
 
  .stadium img{
@@ -118,13 +116,13 @@ width: 99%;
 
 
  #Cat2{
-    color: red;
+    color: rgb(185, 185, 6);
  }
 
 
 
  #Cat1{
-    color: purple;
+    color: red;
  }
 
 
@@ -140,7 +138,7 @@ width: 99%;
    cursor: pointer;
    border-style: none;
    position: relative;
-   left: 36%;
+   left: 33%;
    top: 120px;
  }
 
@@ -158,7 +156,7 @@ width: 99%;
     text-decoration: none;
     cursor: pointer;
     position: relative;
-    left: 35%;
+    left: 32%;
     top: 120px;
 
 
@@ -178,10 +176,40 @@ width: 99%;
     font-size: 40px;
     position: relative;
     right: 35%;
-    bottom: 45%;
+    bottom: 599PX;
     
  }
 
  
 
+ .output{
+   position: relative;
+   right: 34%;
+   bottom: 500px;
+   
+ }
+
+ .output input{
+   border-radius: 6px;
+   width: 15%; 
+   height:30px; 
+   text-decoration: none;
+   cursor: pointer;
+   position: relative;
+ }
+ input::-webkit-outer-spin-button,
+ input::-webkit-inner-spin-button {
+   -webkit-appearance: none;
+   margin: 0;
+ }
  
+
+#timer{
+   color: green;
+   font-size: 40px;
+}
+
+#Titleps{
+   font-size: 20px;
+   font-family: "Open Sans", sans-serif;
+}
