--- a/public/MyAccount.css
+++ b/public/MyAccount.css
@@ -425,7 +425,7 @@ padding-left: 340px;
 .image {
 	height: 250px;
 	width: 250px;
-	background-image: url("/public/materials/Wegz-f.jpg");
+	background-image: url("./public/materials/Wegz-f.jpg");
 	background-size: contain;
 	opacity: 0.85;
 }
