--- a/public/MyAccount.css
+++ b/public/MyAccount.css
@@ -400,6 +400,8 @@ button {
 
 .ongoing-tickets{
 padding-left: 340px;
+position: relative;
+bottom: 120px;
 }
 
 
@@ -422,12 +424,12 @@ padding-left: 340px;
 
 
 
-.image {
-	height: 250px;
-	width: 250px;
-	background-image: url("./public/materials/Wegz-f.jpg");
+.image img{
+	height: 350px;
+	width: 350px;
 	background-size: contain;
 	opacity: 0.85;
+	
 }
 
 .admit-one {
