--- a/public/Master.css
+++ b/public/Master.css
@@ -305,18 +305,8 @@ border-radius: 8px;
 #container2 {
   display: none;
   background-color:red;
-  
 left: 100px;
-
-
 }
-#container3 {
-  display: none;
-  background-color:red;
-  left:200px ;
- 
-}
-
 h3{
 text-align: center;
 margin-top: 40px;
@@ -374,17 +364,251 @@ margin-bottom: 10px;
 .Admin-container2{
   display: none;
 }
-/* #form2{
 
-left: 450px;
+/* Store Section */
+#container3 {
+  overflow: auto;
+  max-height: 100vh; 
+}
+main {
+  height: 100%;
+  width: 100%;
+  text-align: center;
+}
 
-} */
+.themer {
+  all: unset;
+  padding: 40px;
+  height: 20px;
+  width: 40px;
+  border-radius: 20px;
 
 
-/* .Large-Container{
+}
 
-background-color: blueviolet;
-width :500px;
-right: 300px ;
 
-} */
+
+.profile {
+  background-color: var(--primary-bg);
+  border-radius: 8px;
+  height: 200px;
+  width: 550px;
+  position: relative;
+  overflow: hidden;
+  transition: height 0.2s ease;
+  display: inline-block;
+  margin: 8px;
+  vertical-align: top;
+  cursor: pointer;
+}
+  .profile.profile--expanded {
+      height: 1000px;
+      animation: expand 0.5s ease;
+  }
+  .profile__banner {
+      display: block;
+      height: 110px;
+      width: 100%;
+      background-color: rgb(255, 255, 255);
+      border-top-right-radius: inherit;
+      border-top-left-radius: inherit;
+  }
+  .profile__pic {
+      width: 100%;
+      text-align: center;
+      position: absolute;
+      top: 20px;
+  }
+      .profile__pic img {
+          background-color: var(--primary-bg);
+          border-radius: 50%;
+          height: 80px;
+          width: 80px;
+          padding: 3px;
+          object-fit: cover;
+      }
+  .profile__info {
+      width: 100%;
+      text-align: center;
+      position: absolute;
+      top: 109px;
+      background-color: white;
+      padding-bottom: 200px;
+  }
+      .profile__info-display, .profile__info-username {
+          display: block;
+          width: 100%;
+      }
+      .profile__info-display {
+          font-size: 1.2rem;
+          font-weight: bold;
+      }
+      .profile__info-username {
+          color: var(--gray-text);
+      }
+  .profile__data {
+      background-color: #FFFFFF;
+  }
+      .profile--unexpanded > .profile__data, .profile--expanded > .profile__data {
+          width: 100%;
+          text-align: center;
+          padding-top: inherit;
+          height: 66px;
+          position: absolute;
+          top: 168px;
+
+          display: flex;
+          flex-wrap: nowrap;
+          justify-content: space-around;
+      }
+      .profile--unexpanded > .profile__data {
+          opacity: 0;
+          animation: unreveal 0.2s ease;
+      }
+      .profile--expanded > .profile__data {
+          opacity: 1;
+          animation: reveal 0.7s ease;
+      }
+      .profile__data > * > * {
+          display: block;
+      }
+      .profile__data > * > *:first-child {
+          font-size: 1.2rem;
+          font-weight: bold;
+      }
+      .profile__data > * > *:nth-child(2) {
+          font-size: 0.9rem;
+      }
+
+
+
+      #shirt{
+      width: 200px;
+      background-color: white;
+      position: relative;
+      background-color: #FFFFFF;
+      }
+
+      .back{
+          background-color: #FFFFFF;
+      }
+#head{
+  font-size: 25px;
+  font-weight: bold;
+ color: red
+}
+
+#sum{
+  font-size: 15px;
+  font-weight: lighter;
+ font-family: "Open Sans", sans-serif;
+ color: black
+}
+.back button{
+  display: inline-block; 
+  background-color: #EC4899;
+  color: #E7E5E4;
+  border-radius: 6px;
+  width: 120px; 
+  height: 39px; 
+  text-align: center; 
+  line-height: 40px; 
+  margin: 9px;
+  border: none;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.back button:hover{
+  background-color: white;
+  color: black;
+}
+.profile.profile--expanded{
+  margin-bottom: 20px;
+}
+.edit-form {
+  display: none;
+}
+.edit-form label{
+  color: #11101D;
+}
+.edit-form input,
+.edit-form textarea {
+  border-radius: 4px;
+}
+
+.profile.editing .edit-form {
+  display: block;
+}
+
+.Add{
+ margin-left: -300px;
+  display: inline-block; 
+  background-color: #EC4899;
+  color: #E7E5E4;
+  border-radius: 6px;
+  width: 120px; 
+  height: 39px; 
+  text-align: center; 
+  line-height: 40px; 
+  margin: 9px;
+  border: none;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.form-container {
+  margin-top:30px;
+  height: 1000px;
+  margin-left: 50px;
+  display: none;
+  border: 1px solid #ccc;
+  padding: 20px;
+  background-color: #f9f9f9;
+  width: 580px; 
+}
+.form-container.active {
+  display: block;
+}
+.form-container form {
+  display: flex;
+  flex-direction: column;
+}
+.form-container form label {
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+.form-container form input,
+.form-container form textarea {
+  margin-bottom: 10px;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.form-container button{
+  display: inline-block; 
+  background-color: #EC4899;
+  color: #E7E5E4;
+  border-radius: 6px;
+  width: 120px; 
+  height: 39px; 
+  text-align: center; 
+  line-height: 40px; 
+  margin: 9px;
+  border: none;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.form-container.enlarge_form {
+  overflow: auto;
+  max-height: 200vh; 
+  display:block;
+  position: fixed;
+  top: 50%;
+  width: 60%;
+  height: 70%;
+  left: 0%;
+  transform: translate(35%, -50%) scale(0.9);
+  background-color: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  height: 1100px;
+}
