--- a/public/Master.css
+++ b/public/Master.css
@@ -302,11 +302,7 @@ margin-top: 150px;
 position:absolute; 
 border-radius: 8px;
 }
-#container2 {
-  display: none;
-  background-color:red;
-left: 100px;
-}
+
 h3{
 text-align: center;
 margin-top: 40px;
@@ -363,6 +359,207 @@ margin-bottom: 10px;
 }
 .Admin-container2{
   display: none;
+}
+
+/* user section */
+
+
+#container2 {
+  display: none;
+  padding-left: 4%;
+}
+/* Active users section */
+.main{
+  position: relative;
+  padding: 20px;
+  width: 100%;
+}
+.main-top{
+  display: flex;
+  width: 100%;
+}
+.main-top i{
+  position: absolute;
+  right: 0;
+  margin: 10px 30px;
+  color: rgb(110, 109, 109);
+  cursor: pointer;
+}
+.main .users{
+  display: flex;
+  position: relative;
+  right: 1%;
+  width: 100%;
+}
+.users .card{
+  width: 25%;
+  margin: 10px;
+  background: #fff;
+  text-align: center;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
+}
+.users .card img{
+  width: 100px;
+  height: 90px;
+  border-radius: 50%;
+}
+.users .card h4{
+  text-transform: uppercase;
+}
+.users .card p{
+  font-size: 12px;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+}
+.users table{
+  margin:  auto;
+}
+.users .per span{
+  padding: 5px;
+  border-radius: 10px;
+  background: rgb(223, 223, 223);
+}
+.users td{
+  font-size: 14px;
+  padding-right: 15px;
+}
+.users .card button{
+  width: 100%;
+  margin-top: 8px;
+  padding: 7px;
+  cursor: pointer;
+  border-radius: 10px;
+  background: transparent;
+  border: 1px solid #4AD489;
+}
+.users .card button:hover{
+  background: #4AD489;
+  color: #fff;
+  transition: 0.5s;
+}
+/*Users List section  */
+.User{
+  margin-top: 20px;
+  text-transform: capitalize;
+}
+.Users-list{
+  width: 100%;
+  padding: 10px;
+  margin-top: 10px;
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1);
+}
+.table{
+  border-collapse: collapse;
+  margin: 25px 0;
+  font-size: 15px;
+  min-width: 100%;
+  overflow: hidden;
+  border-radius: 5px 5px 0 0;
+}
+table thead tr{
+  color: #fff;
+  background: #34AF6D;
+  text-align: left;
+  font-weight: bold;
+}
+.table th,
+.table td{
+  padding: 12px 15px;
+}
+.table tbody tr{
+  border-bottom: 1px solid #ddd;
+}
+.table tbody tr:nth-of-type(odd){
+  background: #f3f3f3;
+}
+.table tbody tr.active{
+  font-weight: bold;
+  color: #4AD489;
+}
+.table tbody tr:last-of-type{
+  border-bottom: 2px solid #4AD489;
+}
+.table button{
+  padding: 6px 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  background: transparent;
+  border: 1px solid #4AD489;
+}
+.table button:hover{
+  background: #4AD489;
+  color: #fff;
+  transition: 0.5rem;
+}
+
+#ban:hover {
+  background: #d44a4a;
+  border-color: #d44a4a;
+  color: #fff;
+  transition: 0.5s;
+}
+
+.card.enlarge_profile {
+  position: fixed;
+  top: 50%;
+  width: 40%;
+  height: 70%;
+  left: 0%;
+  transform: translate(80%, -50%) scale(0.9);
+  background-color: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+}
+/* #profile1{
+  
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
+} */
+
+.test1{
+  display: none;
+}
+.test2{
+  display: none;
+}
+.test3{
+  display: none;
+}
+.test4{
+  display: none;
+}
+
+#text_card1{
+  color: red;
+}
+.history-container {
+  width: 25%;
+  margin: 10px;
+  background: #fff;
+  text-align: center;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1); 
+}
+
+.history-container.active {
+  display: block;
+}
+
+.history-container.enlarge_history {
+  position: fixed;
+  top: 50%;
+  width: 40%;
+  height: 70%;
+  left: 0%;
+  transform: translate(80%, -50%) scale(0.9);
+  background-color: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
 
 /* Store Section */
