--- a/public/Master.css
+++ b/public/Master.css
@@ -366,7 +366,7 @@ margin-bottom: 10px;
 
 #container2 {
   display: none;
-  padding-left: 4%;
+  padding-left: 4.5%;
 }
 /* Active users section */
 .main{
@@ -432,10 +432,10 @@ margin-bottom: 10px;
   cursor: pointer;
   border-radius: 10px;
   background: transparent;
-  border: 1px solid #4AD489;
+  border: 1px solid #1d1b31;
 }
 .users .card button:hover{
-  background: #4AD489;
+  background: #1d1b31;
   color: #fff;
   transition: 0.5s;
 }
@@ -462,7 +462,7 @@ margin-bottom: 10px;
 }
 table thead tr{
   color: #fff;
-  background: #34AF6D;
+  background: #1d1b31;
   text-align: left;
   font-weight: bold;
 }
@@ -478,20 +478,20 @@ table thead tr{
 }
 .table tbody tr.active{
   font-weight: bold;
-  color: #4AD489;
+  color: #1d1b31;
 }
 .table tbody tr:last-of-type{
-  border-bottom: 2px solid #4AD489;
+  border-bottom: 2px solid #1d1b31;
 }
 .table button{
   padding: 6px 20px;
   border-radius: 10px;
   cursor: pointer;
   background: transparent;
-  border: 1px solid #4AD489;
+  border: 1px solid #1d1b31;
 }
 .table button:hover{
-  background: #4AD489;
+  background: #1d1b31;
   color: #fff;
   transition: 0.5rem;
 }
@@ -542,7 +542,7 @@ table thead tr{
   background: #fff;
   text-align: center;
   border-radius: 10px;
-  padding: 10px;
+  padding: 50px;
   box-shadow: 0 20px 35px rgba(0, 0, 0, 0.1); 
 }
 
@@ -550,7 +550,7 @@ table thead tr{
   display: block;
 }
 
-.history-container.enlarge_history {
+.history-container.enlarge10_history {
   position: fixed;
   top: 50%;
   width: 40%;
@@ -703,7 +703,7 @@ main {
 }
 .back button{
   display: inline-block; 
-  background-color: #EC4899;
+  background-color: #1d1b31;
   color: #E7E5E4;
   border-radius: 6px;
   width: 120px; 
@@ -740,7 +740,7 @@ main {
 .Add{
  margin-left: -300px;
   display: inline-block; 
-  background-color: #EC4899;
+  background-color: #1d1b31;
   color: #E7E5E4;
   border-radius: 6px;
   width: 120px; 
