--- a/public/login.css
+++ b/public/login.css
@@ -2,7 +2,7 @@ html,
 body {
    padding: 0%;
    margin: 0%;
-background-image: url(/public/materials/fan2.jpg);
+background-image: url(./public/materials/fan2.jpg);
 }
 
 .navbar {
