Fixed timer in potm & logout button in admin
if the timer started to give numbers under 10 the button move so i gave the timer static width in css & added logout button to admin page

--- a/public/Admin.css
+++ b/public/Admin.css
@@ -507,3 +507,20 @@ background: black;
 #description{
    border: none;
 }
+
+#lo{
+   color: white;
+   position: relative;
+   bottom:75px;
+   left: 330%;
+   font-size: 20px;
+   font-weight: lighter;
+   cursor:pointer;
+
+}
+
+#lo:hover{
+   border-color: #EC4899;
+   border-style:solid;
+   color: #EC4899;
+}
