--- a/public/login.css
+++ b/public/login.css
@@ -80,9 +80,12 @@ background-image: url(./public/materials/fan2.jpg);
    justify-content: center;
    align-items: center;
    height: 100vh; 
-   background-image: url(/public/materials/fan2.jpg);
+   background-image: url(../public/materials/fan2.JPG);
    background-size: cover;
    background-color: rgb(18, 13, 13); 
+   background-repeat: no-repeat;
+   background-position: center;
+   background-color: #000000;
  }
  
  .form form {
