--- a/public/login.css
+++ b/public/login.css
@@ -80,7 +80,7 @@ background-image: url(./public/materials/fan2.jpg);
    justify-content: center;
    align-items: center;
    height: 100vh; 
-   background-image: url(../public/materials/fan2.JPG);
+   /* background-image: url(../public/materials/fan2.JPG); */
    background-size: cover;
    background-color: rgb(18, 13, 13); 
    background-repeat: no-repeat;
