--- a/public/login.css
+++ b/public/login.css
@@ -2,7 +2,6 @@ html,
 body {
    padding: 0%;
    margin: 0%;
-background-image: url(../public/materials/fan2.jpg);
 }
 
 .navbar {
@@ -76,7 +75,7 @@ background-image: url(../public/materials/fan2.jpg);
    justify-content: center;
    align-items: center;
    height: 100vh; 
-   background-image: url(../public/materials/fan2.JPG);
+   background-image: url(../public/materials/fan2.jpg);
    background-size: cover;
    background-color: rgb(18, 13, 13); 
    background-repeat: no-repeat;
@@ -159,3 +158,9 @@ background-image: url(../public/materials/fan2.jpg);
  
 
 
+#back{
+  position: absolute
+right: 0;
+bottom: 0;
+z-index: 1;
+}
