--- a/public/Master.css
+++ b/public/Master.css
@@ -530,6 +530,13 @@ table thead tr {
   border-color: red;
 }
 
+#accept_but:hover{
+  background-color: rgb(0, 189, 0);
+  color: #fff;
+  border-radius: 10px;
+  border-color: rgb(0, 189, 0);
+}
+
 /* Store Section */
 #container3 {
   display: none;
